fixed navbar button and text-alignment

--- a/css/home.css
+++ b/css/home.css
@@ -49,7 +49,7 @@ nav#work-navbar > .nav-container > .navbar-header a > img{
 }
 
 .navbar-header button{
-    margin-top:10px;
+    margin-top:20px;
 }
 
 .navbar-default .navbar-collapse{
@@ -82,7 +82,7 @@ nav#work-navbar > .nav-container .navbar-right > ul.nav{
 }
 
 .navbar-right > ul.nav > li{
-    padding:8px;
+    padding:27px 8px 0px 8px;
 }
 
 nav#work-navbar > .nav-container .container .navbar-right > ul.nav > li{
